Bug 147355 - Compile error on Solaris 8 - kdeutils/kdf/disklist.cpp uses setenv, which is not available
Summary: Compile error on Solaris 8 - kdeutils/kdf/disklist.cpp uses setenv, which is ...
Status: RESOLVED FIXED
Alias: None
Product: kdf
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Compiled Sources Solaris
: NOR normal
Target Milestone: ---
Assignee: Michael Kropfberger
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-06-29 13:22 UTC by Steve Evans
Modified: 2007-08-01 01:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Steve Evans 2007-06-29 13:22:13 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc 3.4.6 
OS:                Solaris

I get this compile error on Solaris:

[ 76%] Building CXX object kdf/CMakeFiles/kcm_kdf.dir/disklist.o
/cad4/stevee/kde-svn/kdeutils/kdf/disklist.cpp: In member function `int DiskList::readDF()':
/cad4/stevee/kde-svn/kdeutils/kdf/disklist.cpp:249: error: `setenv' was not declared in this scope

This can be fixed by including <kdefakes.h>
Comment 1 Pino Toscano 2007-08-01 01:00:56 UTC
SVN commit 694870 by pino:

#include kdefakes.h so we are sure to have the definition of setenv()

BUG: 147355


 M  +1 -0      disklist.cpp  


--- trunk/KDE/kdeutils/kdf/disklist.cpp #694869:694870
@@ -28,6 +28,7 @@
 #include "disklist.h"
 #include <QTextStream>
 #include <kglobal.h>
+#include <kdefakes.h>
 
 #define BLANK ' '
 #define DELIMITER '#'