#include kdefakes.h so we are sure to have the definition of setenv()

BUG: 147355

svn path=/trunk/KDE/kdeutils/kdf/; revision=694870